@@ -401,6 +401,12 @@ senses (blind/infravision/darkvision/etc), speed (#attacks), \
 height, weight, gender, class, race, hitpoints, hunger (stomach size), \
 mana, movement, thirst (stomach size). \n\r\
 \n\r\
+By default, the values + or - are added to the existing values.  However, if \
+MULTIPLYPH=true is included in the parameters, then attack, armor, and damage \
+will instead have their values multiplied by the given value / 100. Likewise, \
+if MULTIPLYCH=true is included, then hitpoints, mana, and movement are similarly \
+multiplied instead of added.  All other values act the same.\
+\n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
 See ZAPPERMASKS for more information on zapper mask syntax.
